--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <!-- Meta tags, stylesheets, and favicon -->
+    <!-- Link to the main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="Styles.css">
+    <link rel="icon" href="Images/logo.png">
+    <title>Raphulu Online Store</title>
+</head>
+<body>
 
+    <nav>
+        <div style=" background-color: #333; padding: 10px; display: flex; align-items: center; justify-content: flex-end;">
+            <img src="images/logo.png" alt="Store Logo" style="height: 50px; width: auto;">
+            <h1 style="margin: 0; color: goldenrod; margin-left: 10px;">Raphulu Online Store</h1>
+        </div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="cart.html">Shopping Cart</a></li>
+        </ul>
+    </nav>
+
+    <!-- Home Page Content -->
+    <div class="home-content">
+        <h1 style="color: deepskyblue; font-style: oblique; font-size: 60px; background-color: grey;">Welcome to Raphulu Online Store</h1>
+        <p style="background-color:grey;color:silver; font-style: oblique;">Discover a world of quality products at your fingertips. Browse our collection and find the perfect car for you.</p>
+        <img src="images/home_image2.avif" alt="Impressive Home Image" style="background-image:none; width: 100%; height: auto; position: absolute; top: 0; left: 0; z-index: -1;">
+        <br /> 
+        <br />
+        <br />
+        <br />
+        <p style="color:red">Start shopping now!</p>
+    </div>
+
+    <footer style="position:center; font-style:italic; color:navy">&copy; 2023 Raphulu Online Store</footer>
+
+</body>
+</html>
