--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link rel="stylesheet" href="Stylesheet1.css"/>
+
+
+
+    
 </head>
 <body>
+     <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="register.html"> REGISTER</a></li>
+     <li><a href="list.html"> LIST BOOKS</a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     
+     </ul>
+     </nav> 
 <script src="script.js"></script>
 </body>
 </html>
