--- a/index.html
+++ b/index.html
@@ -22,5 +22,46 @@
      </ul>
      </nav> 
 <script src="script.js"></script>
+<!--Footer Added Fuananani Raphulu-->
+  <footer>
+   <hr />
+    <table >
+        <tr>
+            <td>
+                <h3>Upcoming Meetings</h3>
+                <h4> SAGE Community Association Meetings 2023</h4>
+
+                <h4>Executive committee meeting</h4>
+                Friday 24th November at 10.30am SAGE Library
+                <h4>General Meeting</h4>
+                Tuesday 10th December at 7.oopm Rosebank Arts Centre <br />
+            </td>
+            <td>
+                <h3>Executive Comittee Contacts</h3>
+                Chair: Keith Begley <br />
+                Email: chair@delph.org.uk <br />
+                <br />
+                Vice-Chair: Vacant <br />
+                Email: vicechair@delph.org.uk <br />
+                <br />
+                Secretary: Janet Curwell <br />
+                Email: secretary@delph.org.uk <br />
+                <br />
+                Treasurer: Mike Clegg <br />
+                Email: treasurer@delph.org.uk <br />
+            </td>
+            <td>
+                <h3>Please follow & like us</h3>
+                https://facebook.com/SAGECommunityAssociation <br />
+                https://tweeter.com/SAGECommunityAssociation <br />
+                https://intergram.com/SAGECommunityAssociation <br />
+            </td>
+        </tr>
+    </table>
+
+
+    <hr />
+    Copyright &copy; All Rights Reserved SAGE Community Association
+</footer>   
 </body>
 </html>
