--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>SAGE Community Association</title>
     <link rel="stylesheet" href="styles.css"/>
 
 
@@ -21,34 +21,48 @@
      
      </ul>
      </nav> 
+
+     <div class="homepagw-content">
+     <h1>Welcome to SAGE Community Association</h1>
+     <p>The SAGE Community Association runs the SAGE Library, which has all sorts of books. It was started in 2009 by the SAGE company to help people get access to different kinds of books.
+     The library is there to support education and provide a wide range of books for people with different interests. It's like a place where the community can come together and explore various topics through reading. </p>
+     <img src="home_background_image.png">
+     <br />
+     <br />
+     <br />
+     <br />
+  
+     <h1>Our mision</h1>
+     <p>The SAGE Community Association aims to create a lively and welcoming community by running the SAGE Library, providing a friendly space for people of all ages and interests to explore books.</p>
+ </div>
+    
 <script src="script.js"></script>
-<!--Footer Added Fuananani Raphulu-->
   <footer>
    <hr />
     <table >
         <tr>
             <td>
                 <h3>Upcoming Meetings</h3>
-                <h4> SAGE Community Association Meetings 2023</h4>
+                <h4>SAGE Community Association Meetings 2023</h4>
 
                 <h4>Executive committee meeting</h4>
-                Friday 24th November at 10.30am SAGE Library
+                Friday 24th November at 10:30am SAGE Library
                 <h4>General Meeting</h4>
-                Tuesday 10th December at 7.oopm Rosebank Arts Centre <br />
+                Tuesday 10th December at 7:00pm Rosebank Arts Centre <br />
             </td>
             <td>
                 <h3>Executive Comittee Contacts</h3>
-                Chair: Keith Begley <br />
-                Email: chair@delph.org.uk <br />
+                Chairperson: Keith Moyo <br />
+                Email: chairperson@sagelibrary.com <br />
                 <br />
-                Vice-Chair: Vacant <br />
-                Email: vicechair@delph.org.uk <br />
+                Vice-Chair: Lerato Zuma <br />
+                Email: vicechairperson@sagelibrary.com <br />
                 <br />
-                Secretary: Janet Curwell <br />
-                Email: secretary@delph.org.uk <br />
+                Secretary: Praise Khoza <br />
+                Email: secretary@sagelibrary.com <br />
                 <br />
-                Treasurer: Mike Clegg <br />
-                Email: treasurer@delph.org.uk <br />
+                Treasurer: James Maphosa <br />
+                Email: treasurer@sagelibrary.com <br />
             </td>
             <td>
                 <h3>Please follow & like us</h3>
