--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      </ul>
      </nav> 
 
-     <div class="homepagw-content">
+     <div class="homepage-content">
      <h1>Welcome to SAGE Community Association</h1>
      <p>The SAGE Community Association runs the SAGE Library, which has all sorts of books. It was started in 2009 by the SAGE company to help people get access to different kinds of books.
      The library is there to support education and provide a wide range of books for people with different interests. It's like a place where the community can come together and explore various topics through reading. </p>
