--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>link CSS with HTML</title>
-    <link rel="stylesheet" href="StyleSheet2.css">
+    <link rel="stylesheet" href="register.css">
 </head>
 
 
