--- a/register.html
+++ b/register.html
@@ -21,7 +21,10 @@
             <input type="submit" class="signup" value="Sign Up">
             <br />
         </form>
-        <p class="no_account">Dont have an account? <a href="">Sign up here!</a></p><a href=""></a>
+        <form action="signUp.html">
+        <input type="submit" class="signup" value="Sign Up">
+         </form>
+        <p class="no_account">Dont have an account? <a href="signUp.html">Sign up here!</a></p><a href=""></a>
     </div>
 
   
