--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <nav style="width:100%; height:100px; background-color:burlywood">
      <ul>
      <li><a href="index.html"> HOME</a></li>
-     <li><a href="register.html"> REGISTER</a></li>
+     <li><a href="signIn.html"> REGISTER</a></li>
      <li><a href="list.html"> LIST BOOKS</a></li>
      <li><a href="about.html"> ABOUT US</a></li>
      <li><a href="contacts.html"> CONTACT US</a></li>
