--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
      <h1>Our mision</h1>
      <p>The SAGE Community Association aims to create a lively and welcoming community by running the SAGE Library, providing a friendly space for people of all ages and interests to explore books.</p>
  </div>
-    
+       <header>
+       <h1>Online Bookstore</h1>
+       <input type="text" id="searchInput" placeholder="Search books">
+       <button onclick="searchBooks()">Search</button>
+   </header>
+
+   <section id="bookList">
+       <!-- Book items will be displayed here -->
+   </section>
+
+
 <script src="script.js"></script>
   <footer>
    <hr />
@@ -80,3 +90,4 @@
 </footer>   
 </body>
 </html>
+
