SignUp page now save the information input from the user locally

--- a/signUp.html
+++ b/signUp.html
@@ -1,64 +1,56 @@
 <!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <title>Sign Up if you don't have an account</title>
+   
 </head>
 <body>
     <h1>Register an account</h1>
     <br />
-    <h2>
-        Fill in your personal details in here:
-    </h2>
+    <h2>Fill in your personal details here:</h2>
     <br />
-    <hr style=" width:50%; text-align:left; margin-left:0 " />
-    <form action="/form/submit" method="post">
+    <hr style="width:50%; text-align:left; margin-left:0" />
+    <form id="signupForm">
         <div>
-            <label for="First Name"  id="firstName">First Name</label>
-            <input type="text" id="firstName" placeholder="Enter your name" />
+            <label for="firstNameInput">First Name</label>
+            <input type="text" id="firstNameInput" placeholder="Enter your name" />
         </div>
         <br />
-        <br />
         <div>
-            <label for="Second Name"  id="secondName">Second Name</label>
-            <input type="text" id="secondName" placeholder="Enter your surname" />
+            <label for="secondNameInput">Second Name</label>
+            <input type="text" id="secondNameInput" placeholder="Enter your surname" />
         </div>
         <br />
-        <br />
         <div>
-            <label for="email address"  id="email">Email</label>
-            <input type="text" id="email" placeholder="Enter your email address" />
+            <label for="emailInput">Email</label>
+            <input type="text" id="emailInput" placeholder="Enter your email address" />
         </div>
         <br />
-        <br />
         <div>
-            <label for="Telephone number"  id="telephone">Telephone/Cellphone</label>
-            <input type="text" id="telephone" placeholder="Enter your contact numbers" />
+            <label for="telephoneInput">Telephone/Cellphone</label>
+            <input type="text" id="telephoneInput" placeholder="Enter your contact numbers" />
         </div>
         <br />
-        <br />
-        <hr style=" width:50%; text-align:left; margin-left:0 " />
+        <hr style="width:50%; text-align:left; margin-left:0" />
         <h3>Your password</h3>
         <div>
-            <label for="password" id="password">Password</label>
-            <input type="password" id="password" placeholder="Password" />
-
-            <input type="submit" value="Submit" align="center" margin="100px" />
+            <label for="passwordInput">Password</label>
+            <input type="password" id="passwordInput" placeholder="Password" />
         </div>
         <br />
-        <br />
-        <hr style=" width:50%; text-align:left; margin-left:0 " />
+        <hr style="width:50%; text-align:left; margin-left:0" />
         <h4>Subscribe to newsletters</h4>
         <div>
-            <label for="Newsletter subscription" id="newsletter">Opt in for newsletter mail</label>
-            <input type="radio" id="newsletter" />
+            <label for="newsletterYes">Yes</label>
+            <input type="radio" id="newsletterYes" name="newsletter" />
+            <label for="newsletterNo">No</label>
+            <input type="radio" id="newsletterNo" name="newsletter" />
         </div>
-
+        <br />
+        <input type="button" id="submitButton" value="Submit" />
     </form>
 
-
-
-
+    <script src="formStorage.js"></script>
 </body>
 </html>
