--- a/signUp.html
+++ b/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Sign Up if you don't have an account</title>
-   
+   <link rel="stylesheet" href="SignUp.css" />
 </head>
 <body>
     <h1>Register an account</h1>
