--- a/signIn.html
+++ b/signIn.html
@@ -1,16 +1,16 @@
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>link CSS with HTML</title>
+    <title>Login and Sign Up</title>
     <link rel="stylesheet" href="register.css">
 </head>
 
-
 <body>
     <div class="container">
-        <h1>Do you have an Account? <br> please login or create an account. </h1>
-        <form action="login" method="POST">
+        <h1>Do you have an Account?<br>Please login or create an account.</h1>
+        <form id="loginForm">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" autocomplete="off" required>
             <br />
@@ -18,15 +18,13 @@
             <input type="password" id="password" autocomplete="off" name="password" required>
             <br />
             <input type="submit" class="login" value="Login">
-          
-            <br />
         </form>
         <form action="signUp.html">
-        <input type="submit" class="signup" value="Sign Up">
-         </form>
-        <p class="no_account">Dont have an account? <a href="signUp.html">Sign up here!</a></p><a href=""></a>
+            <input type="submit" class="signup" value="Sign Up">
+        </form>
+        <p class="no_account">Don't have an account? <a href="signUp.html">Sign up here!</a></p>
     </div>
 
-  
+    <script src="login.js"></script>
 </body>
 </html>
