--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="contacts.css"/>
 </head>
 <body>
+
+
+    
  <form id="contactForm">
 
      <label for="name">Name:</label>
@@ -26,7 +29,48 @@
      <div id="notification" class="notification"></div>
      <button type="button" onclick="sendEmail()">Send</button>
  </form>
-
+    
 <script>srs="contacts.js" </script>
+
+     <footer>
+   <hr />
+    <table >
+        <tr>
+            <td>
+                <h3>Upcoming Meetings</h3>
+                <h4>SAGE Community Association Meetings 2023</h4>
+
+                <h4>Executive committee meeting</h4>
+                Friday 24th November at 10:30am SAGE Library
+                <h4>General Meeting</h4>
+                Tuesday 10th December at 7:00pm Rosebank Arts Centre <br />
+            </td>
+            <td>
+                <h3>Executive Comittee Contacts</h3>
+                Chairperson: Keith Moyo <br />
+                Email: chairperson@sagelibrary.com <br />
+                <br />
+                Vice-Chair: Lerato Zuma <br />
+                Email: vicechairperson@sagelibrary.com <br />
+                <br />
+                Secretary: Praise Khoza <br />
+                Email: secretary@sagelibrary.com <br />
+                <br />
+                Treasurer: James Maphosa <br />
+                Email: treasurer@sagelibrary.com <br />
+            </td>
+            <td>
+                <h3>Please follow & like us</h3>
+                https://facebook.com/SAGECommunityAssociation <br />
+                https://tweeter.com/SAGECommunityAssociation <br />
+                https://intergram.com/SAGECommunityAssociation <br />
+            </td>
+        </tr>
+    </table>
+
+
+    <hr />
+    Copyright &copy; All Rights Reserved SAGE Community Association
+</footer>   
 </body>
 </html>
