--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-
+ <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="signIn.html"> REGISTER</a></li>
+     <li><a href="listbooks.html">LIST BOOKS</a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     </ul>
+     </nav> 
     
  <form id="contactForm">
 
