--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="About.css">
 </head>
 <body>
+     <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="signIn.html"> REGISTER</a></li>
+     <li><a href="listbooks.html">LIST BOOKS</a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     </ul>
+     </nav> 
+    
     <header>
         <h1>SAGE community Association Book Library</h1>
         <p>Your go-to destination for a vast collection of books.</p>
