--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <section>
         <h2>About Us</h2>
-        <p>Welcome to the Online SAGE community Association Library, your digital haven for exploring and enjoying a diverse range of books. Our mission is to make knowledge accessible to everyone and promote a love for reading.</p>
+        <p>Welcome to the SAGE community Association Library, your digital haven for exploring and enjoying a diverse range of books. Our mission is to make knowledge accessible to everyone and promote a love for reading.</p>
 
         <p>At SAGE community Association Library, we believe in the power of literature to inspire, educate, and entertain. Our collection spans various genres, ensuring there's something for every reader, from classic literature to contemporary bestsellers.</p>
 
