--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   ul li ul.dropdown {
       min-width: 100%;
-      background: plum ;
+      background: Darkgrey ;
       display: none;
       position: absolute;
       z-index: 999;
