--- a/academic.html
+++ b/academic.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Side Navigation Bar for Categories</title>
-    <link href="categories.css" rel="stylesheet" />
+    <link rel="stylesheet" href="academic.css" />
 </head>
 <body>
 
