Contact us form allowing input and forwarding it to the default mail client

--- a/contacts.html
+++ b/contacts.html
@@ -76,6 +76,8 @@
 
     <hr />
     Copyright &copy; All Rights Reserved SAGE Community Association
-</footer>   
+</footer> 
+     
+<script src="script.js"></script>
 </body>
 </html>
