updated the contact form

--- a/contacts.html
+++ b/contacts.html
@@ -36,6 +36,7 @@
      
      <div id="notification" class="notification"></div>
      <button type="button" onclick="sendEmail()">Send</button>
+     </form>
 
      <footer>
    <hr />
