--- a/academic.html
+++ b/academic.html
@@ -27,7 +27,23 @@
 </ul>
         </div>
     </div>
+ <div>
+     <h2>Add a Book</h2>
+     <label for="title">Title:</label>
+     <input type="text" id="title">
+     <label for="author">Author:</label>
+     <input type="text" id="author">
+     <label for="category">Book Categories</label>
+     <input type="text" id="category" />
+     <label for="pubYear">Year of Publication</label>
+     <input type="text" id="pubYear" />
+     <label for="image">Image URL:</label>
+     <input type="text" id="image">
+     <button onclick="addBook()">Add Book</button>
+ </div>
 
+
+ <script src="script.js"></script>
 
 
 
