--- a/listbooks.html
+++ b/listbooks.html
@@ -19,6 +19,12 @@
             <label for="genre">Genre:</label>
             <input type="text" id="genre" name="genre" required><br><br>
 
+             <label for="pubYear">Year of Publication</label>
+             <input type="text" id="pubYear" /><br><br>
+
+             <label for="image">Image URL:</label>
+            <input type="text" id="image" required><br><br>
+
             <button type="submit">Add Book</button>
         </form>
     </div>
