--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Book Library - About Us</title>
     <link rel="stylesheet" href="About.css">
-    <link rel="icon" href="Images/logo.png">
+    <link rel="icon" href="logo.png">
 </head>
 <body>
      <nav style="width:100%; height:100px; background-color:burlywood">
