--- a/biographies.html
+++ b/biographies.html
@@ -3,8 +3,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Side Navigation Bar for Categories</title>
     <link href="categories.css" rel="stylesheet" />
+    <link rel="icon" href="logo.png">
 </head>
 <body>
 
