--- a/signIn.html
+++ b/signIn.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Sign Up</title>
     <link rel="stylesheet" href="register.css">
+    <link rel="icon" href="logo.png">
 </head>
 
 <body>
