--- a/signUp.html
+++ b/signUp.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png">
     <title>Sign Up if you don't have an account</title>
    <link rel="stylesheet" href="SignUp.css" />
 </head>
