--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </head>
 <body>
          <nav style="width:100%; height:100px; background-color:burlywood">
+             <img src="your-image.jpg" alt="Your Image" style="position: absolute; top: 0; left: 0;">
      <ul>
      <li><a href="index.html"> HOME</a></li>
      <li><a href="signIn.html"> REGISTER</a></li>
