--- a/signUp.html
+++ b/signUp.html
@@ -16,29 +16,29 @@
     <form id="signupForm">
         <div>
             <label for="firstNameInput">First Name</label>
-            <input type="text" id="firstNameInput" placeholder="Enter your name" />
+            <input type="text" id="firstNameInput" placeholder="Enter your name" required />
         </div>
         <br />
         <div>
             <label for="secondNameInput">Second Name</label>
-            <input type="text" id="secondNameInput" placeholder="Enter your surname" />
+            <input type="text" id="secondNameInput" placeholder="Enter your surname"  required />
         </div>
         <br />
         <div>
             <label for="emailInput">Email</label>
-            <input type="text" id="emailInput" placeholder="Enter your email address" />
+            <input type="text" id="emailInput" placeholder="Enter your email address"  required/>
         </div>
         <br />
         <div>
             <label for="telephoneInput">Telephone/Cellphone</label>
-            <input type="text" id="telephoneInput" placeholder="Enter your contact numbers" />
+            <input type="text" id="telephoneInput" placeholder="Enter your contact numbers" required/>
         </div>
         <br />
         <hr style="width:50%; text-align:left; margin-left:0" />
         <h3>Your password</h3>
         <div>
             <label for="passwordInput">Password</label>
-            <input type="password" id="passwordInput" placeholder="Password" />
+            <input type="password" id="passwordInput" placeholder="Password" required />
         </div>
         <br />
         <hr style="width:50%; text-align:left; margin-left:0" />
@@ -50,7 +50,7 @@
             <input type="radio" id="newsletterNo" name="newsletter" />
         </div>
         <br />
-        <input type="button" id="submitButton" value="Submit" />
+        <input type="submit" class="login" value="Submit" />
     </form>
 
     <script src="formStorage.js"></script>
