--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAGE Community Association</title>
     <link rel="stylesheet" href="register.css"/>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo.png" height="20px" width="15px">
 <style>
     
       ul li a:hover {
