--- a/listbooks.html
+++ b/listbooks.html
@@ -21,10 +21,10 @@
             <label for="genre">Genre:</label>
             <input type="text" id="genre" name="genre" required><br><br>
 
-             <label for="pubYear">Year of Publication</label>
-             <input type="text" id="pubYear" /><br><br>
+            <label for="pubYear">Year of Publication</label>
+            <input type="text" id="pubYear" /><br><br>
 
-             <label for="image">Image URL:</label>
+            <label for="image">Image URL:</label>
             <input type="text" id="image" required><br><br>
 
             <button type="submit">Add Book</button>
@@ -46,6 +46,8 @@
         </div>
     </div>
 
+
+    <button id="clearBooksBtn">Clear Books Data</button>
 
     <script src="books.js"></script>
 
