--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
     <meta charset="utf-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Explore a world of knowledge with the SAGE Community
+        Association library system. Our webpage provides users with the opportunity 
+        to discover a diverse collection of books. Registered users have the added benefit of 
+        actively participating in the library community by adding, updating, or deleting books
+        from the library system. Additionally, users can conveniently communicate with the library
+        by sending messages through the online form. If you wish to contribute to the library or make
+        changes, feel free to register and become a valued member of our community.">
+  <meta name="keywords" content=",HTML, css, js, SAGE Community Association, library, book discovery, user
+        registration, book management, community engagement, communication, knowledge sharing, book updates, library system.">
+  <meta name="author" content="Chris Maswanganyi, Dinah Skosana, Edith Mashapo, Funanani Raphulu, Jacky Zungu, khangwelo Rasalanavho,
+        Matimba Mabasa, Moloko Sehate, Ntebaleng Letaoana, Onalerona Motsepe,Thabang Motloung, Patience Matatte, Phakamile Myende">
     <title>SAGE Community Association</title>
     <link rel="stylesheet" href="register.css"/>
     <link rel="icon" href="logo.png" height="20px" width="15px">
