Temporarily removed clear data button

--- a/listbooks.html
+++ b/listbooks.html
@@ -46,8 +46,8 @@
         </div>
     </div>
 
-
-    <button id="clearBooksBtn">Clear Books Data</button>
+    <!--Put the clear books button out to avaoid any potential mistakes-->
+    <!--<button id="clearBooksBtn">Clear Books Data</button>-->
 
     <script src="books.js"></script>
 
