--- a/index.html
+++ b/index.html
@@ -25,22 +25,11 @@
           background: #939393;
       }
 
-  ul li ul.dropdown {
-      min-width: 100%;
-      background: darkgrey ;
-      display: none;
-      position: absolute;
-      z-index: 999;
-      left: 0;
-  }
+ 
 
-  ul li:hover ul.dropdown {
-      display: block; 
-  }
+  
 
-  ul li ul.dropdown li {
-      display: block;
-  }
+ 
 </style>
 
 
@@ -52,22 +41,7 @@
      <ul>
      <li><a href="index.html"> HOME</a></li>
      <li><a href="signIn.html"> REGISTER</a></li>
-     <li>  <li>
-        <a href="listbooks.html">LIST BOOKS ▾</a>
-        <ul class="dropdown">
-            <li><a href="academic.html">Academic</a></li>
-            <li><a href="history.html">History</a></li>
-            <li><a href="novels.html">Novels</a></li>
-            <li><a href="financial.html">Financial</a></li>
-            <li><a href="shortstories.html">Short Stories</a></li>
-            <li><a href="biblicals.html">Biblicals</a></li>
-            <li><a href="biographies.html">Biographies</a></li>
-            <li><a href="political.html">Political</a></li>
-            <li><a href="fantasies.html">Fantasies</a></li>
-            <li><a href="sciencefiction.html">Science Fiction</a></li>
-
-        </ul>
-    </li>
+     <li>  <a href="listbooks.html">LIST BOOKS ▾</a></li>
      <li><a href="about.html"> ABOUT US</a></li>
      <li><a href="contacts.html"> CONTACT US</a></li>
      
