--- a/signUp.html
+++ b/signUp.html
@@ -8,6 +8,19 @@
    <link rel="stylesheet" href="SignUp.css" />
 </head>
 <body>
+    <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="signIn.html">SIGN IN </a></li>
+     <li>  <a href="listbooks.html">LIST BOOKS ▾</a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     
+     </ul>
+     </nav> 
+
+
+    
     <h1>Register an account</h1>
     <br />
     <h2>Fill in your personal details here:</h2>
