--- a/signIn.html
+++ b/signIn.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Sign Up</title>
+    <title>Login or Sign Up</title>
     <link rel="stylesheet" href="register.css">
     <link rel="icon" href="logo.png">
 </head>
 
 <body>
+
+        <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="signIn.html"> SIGN IN</a></li>
+     <li>  <a href="listbooks.html">LIST BOOKS </a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     
+     </ul>
+     </nav> 
+
     <div class="container">
         <h1>Do you have an Account?<br>Please login or create an account.</h1>
         <form id="loginForm">
