--- a/listbooks.html
+++ b/listbooks.html
@@ -9,6 +9,19 @@
 </head>
 <body>
 
+    <nav style="width:100%; height:100px; background-color:burlywood">
+     <ul>
+     <li><a href="index.html"> HOME</a></li>
+     <li><a href="signIn.html"> SIGN IN</a></li>
+     <li>  <a href="listbooks.html">LIST BOOKS ▾</a></li>
+     <li><a href="about.html"> ABOUT US</a></li>
+     <li><a href="contacts.html"> CONTACT US</a></li>
+     
+     </ul>
+     </nav> 
+
+
+    
     <div class="addBookForm">
         <h2>Add a New Book</h2>
         <form id="addBookForm">
