--- a/about.html
+++ b/about.html
@@ -8,15 +8,16 @@
     <link rel="icon" href="logo.png">
 </head>
 <body>
-     <nav style="width:100%; height:100px; background-color:burlywood">
-     <ul>
-     <li><a href="index.html"> HOME</a></li>
-     <li><a href="signIn.html"> SIGN IN</a></li>
-     <li><a href="listbooks.html">LIST BOOKS</a></li>
-     <li><a href="about.html"> ABOUT US</a></li>
-     <li><a href="contacts.html"> CONTACT US</a></li>
-     </ul>
-     </nav> 
+    <nav style="width:100%; height:100px; background-color:burlywood">
+        <img src="logo.png" alt="logo image" style="position: absolute; top: 0; right: 0; height:100px; width:150px">
+        <ul>
+            <li><a href="index.html"> HOME</a></li>
+            <li><a href="signIn.html"> SIGN IN</a></li>
+            <li><a href="listbooks.html">LIST BOOKS</a></li>
+            <li><a href="about.html"> ABOUT US</a></li>
+            <li><a href="contacts.html"> CONTACT US</a></li>
+        </ul>
+    </nav> 
     
     <header>
         <h1>SAGE community Association Book Library</h1>
