--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="keywords" content=",HTML, css, js, SAGE Community Association, library, book discovery, user
         registration, book management, community engagement, communication, knowledge sharing, book updates, library system.">
   <meta name="author" content="Chris Maswanganyi, Dinah Skosana, Edith Mashapo, Funanani Raphulu, Jacky Zungu, khangwelo Rasalanavho,
-        Matimba Mabasa, Moloko Sehate, Ntebaleng Letaoana, Onalerona Motsepe,Thabang Motloung, Patience Matatte, Phakamile Myende">
+        Matimba Mabasa, Moloko Sehate, Ntebaleng Letaoana, Onalerona Motsepe,Thabang Motloung, Patience Sedibeng, Phakamile Myende">
     <title>SAGE Community Association</title>
     <link rel="stylesheet" href="register.css"/>
     <link rel="icon" href="logo.png" height="20px" width="15px">
