--- a/signUp.html
+++ b/signUp.html
@@ -63,7 +63,7 @@
             <input type="radio" id="newsletterNo" name="newsletter" />
         </div>
         <br />
-        <input type="submit" class="login" value="Submit" />
+        <input type="button" id="submitButton" value="Submit" />
     </form>
 
     <script src="formStorage.js"></script>
