--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
  </div>
        <header>
        <h1></h1>
-       
+        <input type="text" id="searchInput" placeholder="Search books">
+       <button onclick="searchBooks()">Search</button>
    </header>
 
    <section id="bookList">
    </section>
      
-
+<script src = "script.js></script>
 
   <footer>
    <hr />
