--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    <section id="bookList">
    </section>
      
-<script src = "script.js></script>
+<script src = "script.js"></script>
 
   <footer>
    <hr />
