--- a/teamMember.html
+++ b/teamMember.html
@@ -28,5 +28,18 @@
         <p>Subteam: JavaScript</p>
         <p>Description: </p>
     </div>
+     <div id="Matimba">
+     <h2>Mabasa Matimba</h2>
+     <p>
+         Picture:<img src= "https://scontent.fpry1-1.fna.fbcdn.net/v/t39.30808-6/293797808_3183688885223706_5085348785216446327_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeHIsnRoo5OxknB9xf9gU0wjcQM0vl1XgCpxAzS-XVeAKrmAS6p9ZzRUP4HTzTc1kj9kCEFDeSOc2ckpfk4oEvBP&_nc_ohc=T8MxeVwXjqMAX_mL9q8&_nc_pt=5&_nc_zt=23&_nc_ht=scontent.fpry1-1.fna&oh=00_AfBtxf8BH49UspFD4ba21HmeMKriOj-PyCQLoDbPBEq5qQ&oe=655B8574"
+                      alt="Profile Picture" width="200" height="200">
+     </p>
+     <p>Name & Surname: Mabasa Matimba</p>
+     <p>LinkedIn Profile: <a href="https:" target="_blank">Mabasa Matimba</a></p>
+     <p>Email Address: <a href="matimbaxip@gmail.com">matimbaxip@gmail.com</a></p>
+     <p>Cell Number: +27(0)81 841 8416</p>
+     <p>Subteam: HTML</p>
+     <p>Description: I am a dynamic professional with a diverse skill set, holding a Bachelor of Commerce in Accounting Sciences.</p>
+ </div>
 </body>
 </html>
