--- a/teamMember.html
+++ b/teamMember.html
@@ -41,5 +41,20 @@
      <p>Subteam: HTML</p>
      <p>Description: I am a dynamic professional with a diverse skill set, holding a Bachelor of Commerce in Accounting Sciences.</p>
  </div>
+    
+        <div id="Phakamile">
+ <h2>Phakamile Myende</h2>
+ <p>Picture: <img src="images/pk.jpg" alt="Phakamile's picture" /></p>
+ <p> Name and Surname: Phakamile Myende</p>
+ <p> LinkedIn Profile: <a href="https://www.linkedin.com/in/phakamile-myende-b229b3206/" target="_blank">
+         Phakamile Myende's LinkedIn </a> </p>
+ <p>Email Address: <a href="mailto:pk.myende@gmail.com"></a></p>
+ <p>Cell Number: +27764581472</p>
+ <p>Subteam: JavaScript</p>
+ <p>Description: A Bcom Accounting graduate from the University of KwaZulu Natal, now enrolled on the Systems Development NQF5
+   at Mindworx Academy. A go-getter who believes that there is no challenge greater than her. To not be left behind,we have to 
+    adapt to change and strive in every environment.
+ </p>
+    </div>
 </body>
 </html>
