--- a/teamMember.html
+++ b/teamMember.html
@@ -56,5 +56,19 @@
     adapt to change and strive in every environment.
  </p>
     </div>
+
+  <div id="Ntebaleng">
+      <h2>Ntebaleng Elsie Letaoana</h2>
+      <img src="https://lh3.googleusercontent.com/pw/ADCreHclG4vSwFsyj_IQmQ6p265vIr1rBk8IE6Z4mcNLnSR1Us0OsOwUPTP6hGMtk8F4j2_byO7l12_yverwC7z65GRGNUrt6iogwTV00Oa04Mwv1FzsmTbCJXTR6dLjm_TIZus1hGp9IhZIPdu3FLrkI8U71g=w482-h857-s-no-gm?authuser=0"
+                        alt="Ntebaleng-picture">
+      <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/ntebaleng-elsie-letaoana/">Ntebaleng Letaoana LinkedIn</a></p>
+      <p>Email Address: <a href="mailto:ntebalengelsieletaoana@gmail.com">ntebalengelsieletaoana@gmail.com</a></p>
+      <p>Cell Number: +27765 6569 065</p>
+      <p>Subteam: HTML</p>
+      <p>Description: Ntebaleng Letaoana is an aspiring Software Developer. She is currently a leaener in the Mindworx's Software development leanership under the Sage spondorship.She has a firm understanding of C#, .Net, Java programming and HTML. With an Accounting Science degree and a keen interest in tech, who knows? Diving into Data Scienece in the near future? Who knows, too soon.  </p>
+  </div>
+
+
+    
 </body>
 </html>
