--- a/teamMember.html
+++ b/teamMember.html
@@ -117,6 +117,25 @@
      </div>
 
 
+     id="Funanani">
+        <h2>Funanani Raphulu</h2>
+        <p>
+            <img src="raphulu_image.jpg" alt="Funanani Raphulu's picture">
+        </p>
+        <p>Name & Surname: Funanani Raphulu</p>
+        <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/funanani-raphulu-bab23122a/" target="_blank">Funanani Raphulu's LinkedIn</a></p>
+        <p>Email Address: <a href="mailto:raphulu.funanani99@gmail.com">raphulu.funanani99@gmail.com</a></p>
+        <p>GitHub: <a href="https://github.com/Funanani99?tab=repositories">FRaphulu Repos</a></p>
+        <p>Cell Number: +2776 079 8070</p>
+        <p>Subteam: HTML</p>
+        <p>    
+            Description: A mathematics graduate from the University of Venda shifted to system development at Mindworx Academy, gaining expertise in
+            coding, debugging, and system architecture. I was part of the developing team of a SAGE Community Association website where I was working on 
+            HTML part. This project taught me collaboration, version control, and debugging. This transition solidified my commitment to system 
+            development, leveraging my mathematical background as a strong foundation and fueling my passion for coding in pursuit of opportunities 
+            in technology.
+        </p>
+</div>
     
 </body>
 </html>
