--- a/teamMember.html
+++ b/teamMember.html
@@ -122,7 +122,7 @@
         <p>Name & Surname: Funanani Raphulu</p>
         <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/funanani-raphulu-bab23122a/" target="_blank">Funanani Raphulu's LinkedIn</a></p>
         <p>Email Address: <a href="mailto:raphulu.funanani99@gmail.com">raphulu.funanani99@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/Funanani99?tab=repositories">F Raphulu Repos</a></p>
+        <p>GitHub: <a href="https://github.com/Funanani99?tab=repositories">Funanani Raphulu's Repositories</a></p>
         <p>Cell Number: +2776 079 8070</p>
         <p>Subteam: HTML</p>
         <p>    
