--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             <li><a href="listbooks.html">LIST BOOKS</a></li>
             <li><a href="about.html"> ABOUT US</a></li>
             <li><a href="contacts.html"> CONTACT US</a></li>
+            <li><a href="teamMembers.html">TEAM MEMBER</a></li>
         </ul>
     </nav> 
     
