--- a/contacts.html
+++ b/contacts.html
@@ -11,11 +11,12 @@
 
  <nav style="width:100%; height:100px; background-color:burlywood">
      <ul>
-     <li><a href="index.html"> HOME</a></li>
-     <li><a href="signIn.html"> SIGN IN</a></li>
-     <li><a href="listbooks.html">LIST BOOKS</a></li>
-     <li><a href="about.html"> ABOUT US</a></li>
-   
+         <li><a href="index.html"> HOME</a></li>
+         <li><a href="signIn.html"> SIGN IN</a></li>
+         <li><a href="listbooks.html">LIST BOOKS</a></li>
+         <li><a href="about.html"> ABOUT US</a></li>
+         <li><a href="teamMembers.html">TEAM MEMBER</a></li>
+
      </ul>
      </nav> 
     
