--- a/teamMembers.html
+++ b/teamMembers.html
@@ -59,8 +59,7 @@
 
   <div id="Ntebaleng">
       
-      <img src="https://lh3.googleusercontent.com/pw/ADCreHclG4vSwFsyj_IQmQ6p265vIr1rBk8IE6Z4mcNLnSR1Us0OsOwUPTP6hGMtk8F4j2_byO7l12_yverwC7z65GRGNUrt6iogwTV00Oa04Mwv1FzsmTbCJXTR6dLjm_TIZus1hGp9IhZIPdu3FLrkI8U71g=w482-h857-s-no-gm?authuser=0"
-                        alt="Ntebaleng-picture">
+      <img src="ntebaleng.jpeg alt="Ntebaleng Picture">
       <p>Name & Surname: Ntebaleng Elsie Letaoana</p>
       <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/ntebaleng-elsie-letaoana/">Ntebaleng Letaoana LinkedIn</a></p>
       <p>Email Address: <a href="mailto:ntebalengelsieletaoana@gmail.com">ntebalengelsieletaoana@gmail.com</a></p>
