--- a/teamMembers.html
+++ b/teamMembers.html
@@ -59,7 +59,7 @@
 
   <div id="Ntebaleng">
       
-      <img src="ntebaleng.jpeg alt="Ntebaleng Picture">
+      <img src="ntebaleng.jpeg" alt="Ntebaleng Picture">
       <p>Name & Surname: Ntebaleng Elsie Letaoana</p>
       <p>LinkedIn Profile: <a href="https://www.linkedin.com/in/ntebaleng-elsie-letaoana/">Ntebaleng Letaoana LinkedIn</a></p>
       <p>Email Address: <a href="mailto:ntebalengelsieletaoana@gmail.com">ntebalengelsieletaoana@gmail.com</a></p>
