--- a/teamMembers.html
+++ b/teamMembers.html
@@ -70,7 +70,7 @@
 
      <div id="Khangwelo">
 
-     <img src="https://media.licdn.com/dms/image/D4E03AQFuT4Dij9AmGw/profile-displayphoto-shrink_800_800/0/1700130233408?e=1705536000&v=beta&t=BoVHbWpwTjuXjB2WP34MKFGIPE0n7Sj1bYlqMeVYEAs"
+     <img src="https://media.licdn.com/dms/image/D4D03AQFG4_71NkmZyg/profile-displayphoto-shrink_800_800/0/1700155844720?e=1705536000&v=beta&t=_ESRFj3F-pHIxY9kQ0wHlA8NY0SbS1pqG1RoQQvMSGk"
           alt="Khangwelo's picture'">
 
      <p>Name & Surname: Khangwelo Rasalanavho</p>
@@ -78,7 +78,7 @@
      <p>Email Address: <a href="mailto:krasalanavho@gmail.com">krasalanavho@gmail.com</a></p>
      <p>Cell Number: +2776 529 0752</p>
      <p>Subteam: CSS</p>
-     <p>Description: My work philosophy is to strive for the best in the interest of this organisation. I have a way of words and a hard worker, I adapt very fast and am always looking forward to learn. I can deal with challenges and responsibilities in the best manner. I am capable of anything I put my mind to. I am a strong communicator and team work. I am a person who understands how vital my performance within the role is to the success of your company.I perform all my duties to an exemplary standard to quickly become a team member who contributes positively to the organisation.The development of this project was merely a coding exercise but a transformative journey, there was an enthusiasm equipped with a good perspective on software development and I have learned a lot. </p>
+     <p>Description: My work philosophy was to strive for the best in the interest of SAGE LIBRARY PROJECT. I had to adapt very fast, as I am always looking forward to learn. I had dealt with challenges and responsibilities in the best manner, this has made me realise my capabilities. I have actually realised that I am a strong communicator and that team work needs patience. I am a person who understood how vital my performance within the role is to have a success in this amazing project we have done. I performed all my duties to an exemplary standard to quickly become a team member who contributes positively to this project. The development of this project was merely a coding exercise but a transformative journey, there was an enthusiasm equipped with a good perspective on software development. This made me realise that nothing is more amazing that exploring a library. We may have encountered challenges but that was an opportunity to enhance my problem solving skills and testing my mind-set to overcome any obstacle as a stepping stone to success. This project of creating a library has taught me the importance of adaptability and evolving into technology. As I reflect on this opportunity, it has been an amazing journey and I am looking forward to work on projects like this in future again. I have developed enthusiasm under software development and it has expanded my knowledge towards devOps. I have learned the art of collaboration, sharing my own view and adapting to different views from others. I was under the CSS group and our duty was to apply the best style an ensure that the project was presentable and I had to work seamlessly to ensure that everything is in order, not only did I work under CSS group but I was the presenter who showcased our amazing work that we did willingly and out of love. This was one of the best achievements in my life. </p>
  </div>
 
  <div id="Dinah">
@@ -132,6 +132,19 @@
             in technology.
         </p>
    </div>
+
+    <div id="Chris">
+    
+    <img src="https://media.licdn.com/dms/image/C4D03AQEt6xkh36u8xQ/profile-displayphoto-shrink_800_800/0/1624398512543?e=1705536000&v=beta&t=-XphyyodrU8HlIgb_uwH-FeBXWLVWEcWj37eU7re0nc" />
+    <p>Name & Surname: Chris Maswanganye</p>
+    <p>Linkedin Profile: <a href="https://www.linkedin.com/in/keamogetswe-chris-maswanganye-39b69b1a3/" target="_blank">Chris Maswanganye's LinkedIn</a></p>
+    <p>Email Address: <a href="mailto:chrismaswanganye73@gmail.com">chrismaswanganye73@gmail.com</a></p>
+    <p>Cell Number: 065 955 2583</p>
+    <p>Subteam: HTML</p>
+    <p>
+        Description: I'm a technical support graduate and also i have CompTia A+ and Microsoft 365 fundamentals Certificates and now i'm currently doing System Development at Mindwordx
+    </p>
+</div>
     
 </body>
 </html>
