--- a/teamMembers.html
+++ b/teamMembers.html
@@ -60,7 +60,7 @@
     
         <div id="Phakamile">
  
- <img src="images/pk.jpg" alt="Phakamile's picture" />
+ <img src="pk.jpg" alt="Phakamile's picture" />
  <p> Name and Surname: Phakamile Myende</p>
  <p> LinkedIn Profile: <a href="https://www.linkedin.com/in/phakamile-myende-b229b3206/" target="_blank">
          Phakamile Myende's LinkedIn </a> </p>
