--- a/teamMembers.html
+++ b/teamMembers.html
@@ -64,7 +64,7 @@
  <p> Name and Surname: Phakamile Myende</p>
  <p> LinkedIn Profile: <a href="https://www.linkedin.com/in/phakamile-myende-b229b3206/" target="_blank">
          Phakamile Myende's LinkedIn </a> </p>
- <p>Email Address: <a href="mailto:pk.myende@gmail.com"></a></p>
+ <p>Email Address: <a href="mailto:pk.myende@gmail.com">pk.myende@gmail.com</a></p>
  <p>Cell Number: +27764581472</p>
  <p>Subteam: JavaScript</p>
  <p>Description: A Bcom Accounting graduate from the University of KwaZulu Natal, now enrolled on the Systems Development NQF5
