--- a/teamMembers.html
+++ b/teamMembers.html
@@ -42,7 +42,18 @@
         <p>GitHub: <a href="https://github.com/MSehata?tab=repositories">MSehata Repos</a></p>
         <p>Cell Number: +2776 903 1338</p>
         <p>Subteam: JavaScript</p>
-        <p>Description: </p>
+        <p>
+            Description: As an adaptable Computer Science graduate passionate about software development, cybersecurity, 
+            and Continuous Integration/Continuous Deployment (CI/CD) practices, I bring a diverse skill set honed through 
+            hands-on experience as a Certified TrakSYS Engineer. My expertise spans various domains, including a solid foundation
+            in web development with proficiency in HTML, CSS, JavaScript, React, and Angular frameworks. This enables me to craft secure, 
+            engaging, and innovative web solutions. Beyond web development, my experience encompasses software development, regression
+            testing, and a systematic problem-solving approach. I thrive in team environments, communicating complex concepts effectively
+            while fostering collaboration. My commitment to continual learning drives me to innovate solutions that prioritize robust security
+            measures. Combining keen problem-solving abilities with clear communication skills, I am poised to contribute meaningfully in 
+            software development and cybersecurity spheres. Eager to apply my technical expertise, I am dedicated to advancing technology while
+            embracing best practices and emerging trends in the field.
+        </p>
     </div>
      <div id="Matimba">
      
