--- a/teamMembers.html
+++ b/teamMembers.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Team Members</title>
     <link rel="stylesheet" href="teamMembers.css" />
+    <link rel="icon" href="logo.png" height="20px" width="15px">
 </head>
 <body>
     <nav>
