--- a/teamMembers.html
+++ b/teamMembers.html
@@ -17,7 +17,7 @@
             <li><a href="teamMembers.html">TEAM MEMBER</a></li>
         </ul>
     </nav>
-
+    <h1>Team that collaborated to Build the project of <acronym title="Sage Community Association">SCA</acronym></h1>
     <div class="jump-links">
     <ul>
         <li><a href="#Moloko">Jump to Moloko Sehata</a></li>
