--- a/teamMembers.html
+++ b/teamMembers.html
@@ -195,6 +195,39 @@
      </p>
 
  </div>
+
+    <footer>
+        <table>
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Surname</td>
+                    <td>Contact Information</td>
+                    <td>Role Played</td>
+                </tr>
+            </thead>
+            <tr>
+                <td>Evans</td>
+                <td>Fundira</td>
+                <td>
+                    <p><a href="mailto:evansfundira@gmail.com">evansfundira@gmail.com</a></p>
+                    <br />
+                    <p>073 413 9899</p>
+                </td>
+                <td>Facilitator</td>
+            </tr>
+            <tr>
+                <td><a href="#Moloko">Moloko</a></td>
+                <td><a href="#Moloko">Sehata</a></td>
+                <td>
+                    <p><a href="mailto:moloko4@live.com">moloko4@live.com.com</a></p>
+                    <br />
+                    <p>076 903 1338</p>
+                </td>
+                <td>Project Lead</td>
+            </tr>
+        </table>
+    </footer>
     <script src="teamMembers.js"></script>
 </body>
 </html>
