--- a/teamMembers.html
+++ b/teamMembers.html
@@ -44,7 +44,7 @@
         <p>Cell Number: +2776 903 1338</p>
         <p>Subteam: JavaScript</p>
         <p>
-            Description: As an adaptable Computer Science graduate passionate about software development, cybersecurity, 
+            Description: Adaptable Computer Science graduate; passionate about software development, cybersecurity, 
             and Continuous Integration/Continuous Deployment (CI/CD) practices, I bring a diverse skill set honed through 
             hands-on experience as a Certified TrakSYS Engineer. My expertise spans various domains, including a solid foundation
             in web development with proficiency in HTML, CSS, JavaScript, React, and Angular frameworks. This enables me to craft secure, 
